--- a/package.json
+++ b/package.json
@@ -2,10 +2,22 @@
     "name": "pocketmine-code-snippets",
     "displayName": "PocketMine Code Snippets",
     "description": "PocketMine-MP extension for VSCode",
-    "version": "0.0.1",
+    "version": "0.0.2",
+    "publisher": "InkoHX",
+    "license": "Apache License 2.0",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/InkoHX/pmmp-vscode"
+    },
     "engines": {
         "vscode": "^1.32.0"
     },
+    "keywords": [
+        "PocketMine-MP",
+        "pmmp",
+        "php",
+        "yaml"
+    ],
     "categories": [
         "Snippets"
     ],
